# Xtore

./: .gitignore  README.md  XtoreSetup.py  postactivate  pyproject.toml  requirements-debian.txt  requirements-ubuntu.txt  requirements.txt  setup.py  test38.json
.devcontainer/: create-venv.sh  devcontainer.json  install-dependencies.sh  spawn-server.sh
archive/: BufferStream.pxd
archive/cli/: DBClientCLI.pyx  DBServiceCLI.pyx  LoadBalanceCLI.pyx
archive/common/: Buffer.pxd  BufferStream.pyx
archive/instance/: RangeTreePlusStorage.pxd  RangeTreePlusStorage.pyx  RangeTreeStorage.pxd  RangeTreeStorage.pyx
archive/test/: BufferStreamTest.pyx  Packet.pxd  Packet.pyx  PeopleRTPStorage.pxd  PeopleRTPStorage.pyx
archive/wrap/: HashMapInstance.hpp  HashMapInstance.pxd
changelog/: TODO.md  XEP101.md  XEP103.md
config/: XtoreNetwork.json
cpp/: setup.py
cpp/src/: Buffer.cpp  Buffer.hpp  ChunkedBuffer.cpp  ChunkedBuffer.hpp  DataType.hpp  HomomorphicEncryption.cpp  HomomorphicEncryption.hpp
script/: xt-cli  xt-cluster  xt-consistent  xt-create-config  xt-get  xt-homomorphic  xt-linear  xt-master  xt-node  xt-replica  xt-send  xt-server  xt-service  xt-start-service  xt-test  xt-test-primeRing
src/xtore/: BaseType.pxd  Buffer.pxd  DoubleLayerRangeResult.pxd  DoubleLayerRangeResult.pyx  HashNode.pxd  HashNode.pyx  HashPageNode.pxd  HashPageNode.pyx  HashStorage.pxd  HashStorage.pyx  LinkedPage.pxd  LinkedPage.pyx  LinkedPageStorage.pxd  LinkedPageStorage.pyx  Page.pxd  Page.pyx  PageSearch.pxd  PageSearch.pyx  StreamIOHandler.pxd  StreamIOHandler.pyx
src/xtore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xtore/algorithm/: ConsistentHashing.pxd  ConsistentHashing.pyx  ConsistentNode.pxd  ConsistentNode.pyx  Node.pxd  Node.pyx  PrimeNode.pxd  PrimeNode.pyx  PrimeRing.pxd  PrimeRing.pyx  (+6 more)
(+178 files in other folders)
