[project]
name = "xtore"
description = "Xtore: A simple storage module with simple indexing."
version = "0.1"
dependencies = [
]
authors = [
	{name="Kittipong Piyawanno", email="k.piyawanno@gmailc.com"},
]
readme="README.md"
keywords = ["database"]

classifiers = [
	# How mature is this project? Common values are
	#   3 - Alpha
	#   4 - Beta
	#   5 - Production/Stable
	"Development Status :: 3 - Alpha",

	# Indicate who your project is intended for
	"Intended Audience :: Developers",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries :: Python Modules",

	# Pick your license as you wish (see also "license" above)
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",

	# Specify the Python versions you support here.
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Piyawanno/Xtore"
Documentation = "https://github.com/Piyawanno/Xtore/tree/main/document"
Repository = "https://github.com/Piyawanno/Xtore"
Issues = "https://github.com/Piyawanno/Xtore/issues"
Changelog = "https://github.com/Piyawanno/Xtore/blob/main/CHANGELOG.md"

[project.scripts]


[project.optional-dependencies]
dev = ["Cython>=3.0.0", "build", "setuptools", "wheel"]

[build-system]
requires = ["setuptools", "Cython>=3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
xtore = ["*.pxd", "common/*.pxd", "instance/*.pxd", "test/*.pxd"]

[tool.setuptools.exclude-package-data]
xtore = ["*.cpp"]

[tool.local.cythonize.kwargs]
parallel = 16

[tool.setuptools.packages.find]
where = ["./src/"]
include = ["xtore", "xtore.*"]
exclude = []
namespaces = true

